force-app/main/default/objects/Facility__c/fields/Aquatics_Examiner_Service__c.field-meta.xml
<CustomField>
    <fullName>Aquatics_Examiner_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aquatics Examiner Service</label>
    <referenceTo>Training_Events__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>