force-app/main/default/objects/Facility__c/fields/Dates_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Dates_of_Operation__c</fullName>
    <label>Dates of Operation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>