force-app/main/default/objects/Facility__c/fields/Facility_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address_2__c</fullName>
    <label>Facility Address 2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>