force-app/main/default/objects/Facility__c/fields/Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Facility_City__c</fullName>
    <label>Facility City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>