force-app/main/default/objects/Facility__c/fields/Facility_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Email__c</fullName>
    <formula>Facility_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Contact Email</label>
    <type>Text</type>
</CustomField>