force-app/main/default/objects/Facility__c/fields/Facility_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Phone__c</fullName>
    <formula>Facility_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Contact Phone</label>
    <type>Text</type>
</CustomField>