force-app/main/default/objects/Facility__c/fields/Facility_Operating_Season__c.field-meta.xml
<CustomField>
    <fullName>Facility_Operating_Season__c</fullName>
    <label>Facility Operating Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Year-Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>