force-app/main/default/objects/Facility__c/fields/Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Facility_State__c</fullName>
    <label>Facility State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>