force-app/main/default/objects/Facility__c/fields/Facility_Street__c.field-meta.xml
<CustomField>
    <fullName>Facility_Street__c</fullName>
    <label>Facility Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>