force-app/main/default/objects/Facility__c/fields/Number_of_Outdoor_attractions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Outdoor_attractions__c</fullName>
    <label>Number of Outdoor attractions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>