force-app/main/default/objects/Facility__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <formula>Aquatics_Examiner_Service__r.Product_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>