force-app/main/default/objects/Facility__c/fields/Seasonal__c.field-meta.xml
<CustomField>
    <fullName>Seasonal__c</fullName>
    <label>Seasonal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Year-Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>