force-app/main/default/objects/Facility__c/fields/Visit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Visit_Hours__c</fullName>
    <label>Visit Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>